- Added requirements for compatibility with the module system - Some java 11 migration